data/all_generated_tests/raw_wast_tests/unreachable_StackCorruption_1007.wast
;; 8. **Large Stack Frames with `unreachable`:**    - **Description:** Push a large number of values onto the stack before hitting an `unreachable`, verifying that large stack frames are correctly handled when a trap occurs.    - **Constraint:** Stack should be correctly reversed to its initial state when the trap occurs.    - **Relation to Stack Corruption:** Tests large stack frame management.

(assert_invalid
  (module (func $large-stack-frame-with-unreachable
    (block (i32.const 1) (i32.const 2) (i32.const 3) (i32.const 4) (i32.const 5) (i32.const 6) (i32.const 7) (i32.const 8) (i32.const 9) (i32.const 10) (i32.const 11) (i32.const 12) (i32.const 13) (i32.const 14) (i32.const 15) (i32.const 16) (i32.const 17) (i32.const 18) (i32.const 19) (i32.const 20) (i32.const 21) (i32.const 22) (i32.const 23) (i32.const 24) (i32.const 25) (i32.const 26) (i32.const 27) (i32.const 28) (i32.const 29) (i32.const 30) (i32.const 31) (i32.const 32) (i32.const 33) (i32.const 34) (i32.const 35) (i32.const 36) (i32.const 37) (i32.const 38) (i32.const 39) (i32.const 40) (i32.const 41) (i32.const 42) (i32.const 43) (i32.const 44) (i32.const 45) (i32.const 46) (i32.const 47) (i32.const 48) (i32.const 49) (i32.const 50) (i32.const 51) (i32.const 52) (i32.const 53) (i32.const 54) (i32.const 55) (i32.const 56) (i32.const 57) (i32.const 58) (i32.const 59) (i32.const 60) (i32.const 61) (i32.const 62) (i32.const 63) (i32.const 64) (i32.const 65) (i32.const 66) (i32.const 67) (i32.const 68) (i32.const 69) (i32.const 70) (i32.const 71) (i32.const 72) (i32.const 73) (i32.const 74) (i32.const 75) (i32.const 76) (i32.const 77) (i32.const 78) (i32.const 79) (i32.const 80) (i32.const 81) (i32.const 82) (i32.const 83) (i32.const 84) (i32.const 85) (i32.const 86) (i32.const 87) (i32.const 88) (i32.const 89) (i32.const 90) (i32.const 91) (i32.const 92) (i32.const 93) (i32.const 94) (i32.const 95) (i32.const 96) (i32.const 97) (i32.const 98) (i32.const 99) (i32.const 100) (unreachable))
  ))
  "type mismatch"
)